Full rebranding to Evergreen DCS. Added image files for future customization. Cleaned up certain design aspects including navigation tabs in header.

--- a/client/src/components/Cards/CardStyle/cards.css
+++ b/client/src/components/Cards/CardStyle/cards.css
@@ -7,7 +7,7 @@ body {
 body {
     display: flex;
     flex-direction: column;
-    background-image: url(../../../assets/images/image2.jpg);
+    background-image: url(../../../assets/images/succulent.jpg);
     background-size: cover;
     background-position: center;
 }
