--- a/client/src/components/Header/header.css
+++ b/client/src/components/Header/header.css
@@ -16,3 +16,9 @@ body {
 .main-header {
     z-index: 99;
 }
+
+.nav-button-container .nav-link {
+    float: right;
+    margin: 0 !important;
+    padding: 5px !important;
+}
